# alsa-jamesdsp

./: .gitignore  CMakeLists.txt  README.md  jdspfx.txt
src/: Effect.cpp  EffectDSPMain.cpp  EffectDSPMain.h  JdspImpResToolbox.c  dspinterface.h  global.h  iirfilters.c  iirfilters.h  jdspfx.h  pcm_jdspfx.cpp  vdc.c
src/viper/: constants.h
src/viper/effects/: AnalogX.cpp  AnalogX.h  ColorfulMusic.cpp  ColorfulMusic.h  DynamicSystem.cpp  DynamicSystem.h  SpectrumExtend.cpp  SpectrumExtend.h
src/viper/utils/: DepthSurround.cpp  DepthSurround.h  DynamicBass.cpp  DynamicBass.h  Stereo3DSurround.cpp  Stereo3DSurround.h
